@@ -8,15 +8,15 @@ import com.example.demo.exceptions.EncryptionException;
 import com.example.demo.model.enums.ERole;
 import com.example.demo.entity.*;
 import com.example.demo.repository.*;
-import com.example.demo.request.ForgotPasswordRequest;
-import com.example.demo.request.LoginRequest;
-import com.example.demo.request.RegisterRequest;
-import com.example.demo.request.ResetPasswordRequest;
+import com.example.demo.dto.ForgotPasswordRequest;
+import com.example.demo.dto.LoginRequest;
+import com.example.demo.dto.RegisterRequest;
+import com.example.demo.dto.ResetPasswordRequest;
 import com.example.demo.response.JwtResponse;
 import com.example.demo.service.EmailService;
 import com.example.demo.service.UserDetailsImpl;
+import com.example.demo.service.ValidationService;
 import com.example.demo.util.JwtUtil;
-import io.jsonwebtoken.Jwt;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import org.slf4j.Logger;
@@ -32,11 +32,9 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.example.demo.util.AESUtil.decrypt;
 import static com.example.demo.util.AESUtil.encrypt;
-
 
 @RestController
 @RequestMapping("/api/auth")
@@ -44,11 +42,9 @@ public class AuthController {
 
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
-    private final StudentRepository studentRepository;
-    private final AdminRepository adminRepository;
-    private final SecretaryRepository secretaryRepository;
     private final PasswordEncoder passwordEncoder;
     private final JwtUtil jwtUtil;
+    private final ValidationService validationService;
     private static final Logger loggerAuthController = LoggerFactory.getLogger(AuthController.class);
     private EmailService emailService;
 
@@ -56,27 +52,22 @@ public class AuthController {
     public AuthController(
             UserRepository userRepository,
             RoleRepository roleRepository,
-            StudentRepository studentRepository,
-            SecretaryRepository secretaryRepository,
-            AdminRepository adminRepository,
             PasswordEncoder passwordEncoder,
             JwtUtil jwtUtil,
-            EmailService emailService
+            EmailService emailService,
+            ValidationService validationService
     ){
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
-        this.studentRepository = studentRepository;
-        this.secretaryRepository = secretaryRepository;
-        this.adminRepository = adminRepository;
         this.passwordEncoder = passwordEncoder;
         this.jwtUtil = jwtUtil;
         this.emailService = emailService;
+        this.validationService = validationService;
     }
 
     @PostMapping("/login")
-    public ResponseEntity<JwtResponse> login(@Valid @RequestBody LoginRequest loginRequest) {
-            User currentUser = findUserByIdentifier(loginRequest.getRegistrationNumber());
-
+    public ResponseEntity<JwtResponse> login(@RequestBody LoginRequest loginRequest) {
+            User currentUser = validationService.findUserByIdentifier(loginRequest.getRegistrationNumber());
             if (currentUser == null){
                 return ResponseEntity.status(404).body(new JwtResponse(ErrorMessage.NON_EXISTENT_USER));
             }
@@ -95,53 +86,59 @@ public class AuthController {
     }
 
     @PostMapping("/register")
-    public ResponseEntity<JwtResponse> register(@RequestBody RegisterRequest registerRequest) {
-        ERole newAccountRole = null;
-        String email = registerRequest.getEmail();
-        if(userRepository.existsByEmail(email))
-        {
-            return ResponseEntity.status(409).body(new JwtResponse(ErrorMessage.AUTH_KEY_IN_USE));
-        }
-        else{
-
-                String tempAuthKey = encryptException(registerRequest.getRegistrationNumber());
-                if(studentRepository.existsByRegNumber(registerRequest.getRegistrationNumber()))
+    public ResponseEntity<JwtResponse> register(@RequestBody RegisterRequest registerRequest){
+        try{
+            ERole newAccountRole = null;
+            String email = registerRequest.getEmail();
+            boolean emailExists = userRepository.existsByEmail(email);
+            if(emailExists)
+            {
+                return ResponseEntity.status(409).body(new JwtResponse(ErrorMessage.AUTH_KEY_IN_USE));
+            }
+            else{
+                if(validationService.findStudent(registerRequest.getRegistrationNumber()) != null)
                     newAccountRole = ERole.ROLE_STUDENT;
-                else if(secretaryRepository.existsByAuthKey(tempAuthKey))
+                else if(validationService.findSecretary(registerRequest.getRegistrationNumber()) != null)
                     newAccountRole = ERole.ROLE_SECRETARY;
-                else if(adminRepository.existsByAuthKey(tempAuthKey))
+                else if(validationService.findAdmin(registerRequest.getRegistrationNumber()) != null)
                     newAccountRole = ERole.ROLE_ADMIN;
                 else
                     return ResponseEntity.status(404).body(new JwtResponse(ErrorMessage.INVALID_DATA));
-        }
-        if(validateData(registerRequest, newAccountRole)){
-            Optional<Role> accountRole = roleRepository.findByName(newAccountRole);
-            Set<Role> roles = new HashSet<>();
-            roles.add(accountRole.get());
-            String tempKey = registerRequest.getRegistrationNumber();
-            String hashedPassword = passwordEncoder.encode(registerRequest.getPassword());
-            if(newAccountRole.equals(ERole.ROLE_ADMIN) || newAccountRole.equals(ERole.ROLE_SECRETARY))
-            {
-                tempKey = encryptException(tempKey);
             }
-
-            User newUser = new User(
-                    registerRequest.getLastName(),
-                    registerRequest.getFirstName(),
-                    tempKey,
-                    null,
-                    null,
-                    registerRequest.getEmail(),
-                    hashedPassword,
-                    null,
-                    null
-            );
-            newUser.setRoles(roles);
-            userRepository.save(newUser);
-            return ResponseEntity.ok(new JwtResponse(ValidationMessage.ACCOUNT_SUCCESS));
+            if(validateData(registerRequest, newAccountRole)){
+                Optional<Role> accountRole = roleRepository.findByName(newAccountRole);
+                Set<Role> roles = new HashSet<>();
+                if(accountRole.isPresent())
+                    roles.add(accountRole.get());
+                String tempKey = registerRequest.getRegistrationNumber();
+                String hashedPassword = passwordEncoder.encode(registerRequest.getPassword());
+                if(!newAccountRole.equals(ERole.ROLE_STUDENT))
+                {
+                    tempKey = encrypt(tempKey);
+                }
+                User newUser = new User(
+                        registerRequest.getLastName(),
+                        registerRequest.getFirstName(),
+                        tempKey,
+                        null,
+                        null,
+                        registerRequest.getEmail(),
+                        hashedPassword,
+                        null,
+                        null
+                );
+                newUser.setRoles(roles);
+                userRepository.save(newUser);
+                return ResponseEntity.ok(new JwtResponse(ValidationMessage.ACCOUNT_SUCCESS));
+            }
+            else
+                return ResponseEntity.status(400).body(new JwtResponse(ErrorMessage.INVALID_DATA));
         }
-        else
-            return ResponseEntity.status(400).body(new JwtResponse(ErrorMessage.INVALID_DATA));
+        catch(EncryptionException ex){
+            return ResponseEntity.status(500).body(new JwtResponse(ErrorMessage.ENCRYPTION_ERROR));
+        }catch(DecryptionException ex){
+            return ResponseEntity.status(500).body(new JwtResponse(ErrorMessage.DECRYPTION_ERROR));
+        }
     }
 
     @PostMapping("/logout")
@@ -169,7 +166,7 @@ public class AuthController {
 
         User user = temporaryUser.get();
         String resetPasswordToken = jwtUtil.generatePasswordResetToken(user.getEmail());
-        String resetLink = "http://localhost:8080/reset-password?token=" + resetPasswordToken;
+        String resetLink = "http://localhost:4200/reset-password?token=" + resetPasswordToken;
 
         String subject = "Reset your password";
         String content = "Link to reset your accounts password: " + resetLink;
@@ -212,74 +209,50 @@ public class AuthController {
     public ResponseEntity<JwtResponse> getCurrentUser(Authentication authentication){
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 
-        List<String> rolesName = userDetails.getAuthorities().stream().map(item -> item.getAuthority()).collect(Collectors.toList());
+        List<String> rolesName = userDetails.getAuthorities().stream().map(item -> item.getAuthority()).toList();
 
         JwtResponse response = new JwtResponse(null, userDetails.getId(), userDetails.getUsername(), rolesName);
 
         return ResponseEntity.ok(response);
     }
 
+
     private boolean validateData(RegisterRequest registerRequest, ERole registerRole){
-        String tempAuthKey = encryptException(registerRequest.getRegistrationNumber());
-        switch(registerRole){
-            case ROLE_STUDENT:
-                Student tempStudent = studentRepository.findByRegNumber(registerRequest.getRegistrationNumber()).get();
-                return tempStudent.getRegNumber().equals(registerRequest.getRegistrationNumber()) && tempStudent.getEmail().equals(registerRequest.getEmail());
-            case ROLE_SECRETARY:
-
-                Secretary tempSecretary = secretaryRepository.findByAuthKey(tempAuthKey).get();
-                    String tempSecretaryKey = decryptException(tempSecretary.getAuthKey());
-                    return tempSecretaryKey.equals(registerRequest.getRegistrationNumber()) && tempSecretary.getEmail().equals(registerRequest.getEmail());
-
-
-            case ROLE_ADMIN:
-                Admin tempAdmin = adminRepository.findByAuthKey(tempAuthKey).get();
-                    String tempAdminKey = decryptException(tempAdmin.getAuthKey());
-                    return tempAdminKey.equals(registerRequest.getRegistrationNumber()) && tempAdmin.getEmail().equals(registerRequest.getEmail());
-            default:
-                return false;
-        }
-    }
-
-    public User findUserByIdentifier(String identifier){
-        String tempKey = encryptException(identifier);
-        Optional<User> optionalUserCrypt = userRepository.findByRegNumber(tempKey);
-        Optional<User> optionalUserStudent = userRepository.findByRegNumber(identifier);
-        boolean isAdmin = true;
-        Optional<User> emailUser = userRepository.findByEmail(identifier);
-        if(emailUser.isPresent()){
-            return emailUser.get();
-        }
-        if (optionalUserCrypt.isEmpty() && optionalUserStudent.isEmpty())
-            return null;
-
-        if(!optionalUserStudent.isEmpty()) {
-            isAdmin = false;
-        }
-
-        if(isAdmin)
-            return optionalUserCrypt.get();
-        else
-            return optionalUserStudent.get();
-    }
-
-    private static String encryptException(String input){
         try{
-            return encrypt(input);
-        } catch (EncryptionException ex){
+            String email = registerRequest.getEmail();
+
+            switch(registerRole) {
+                case ROLE_STUDENT:
+                    Student student = validationService.findStudent(registerRequest.getRegistrationNumber());
+                    if(student == null)
+                        return false;
+                    else
+                        return student.getRegNumber().equals(registerRequest.getRegistrationNumber()) &&
+                                student.getEmail().equals(email);
+                case ROLE_SECRETARY:
+                    Secretary secretary = validationService.findSecretary(registerRequest.getRegistrationNumber());
+                    if(secretary == null)
+                        return false;
+                    else
+                        return decrypt(secretary.getAuthKey()).equals(registerRequest.getRegistrationNumber()) &&
+                                secretary.getEmail().equals(email);
+                case ROLE_ADMIN:
+                    Admin admin = validationService.findAdmin(registerRequest.getRegistrationNumber());
+                    if(admin == null)
+                        return false;
+                    else
+                        return decrypt(admin.getAuthKey()).equals(registerRequest.getRegistrationNumber()) &&
+                                admin.getEmail().equals(email);
+                default:
+                    return false;
+            }
+        }catch (DecryptionException ex){
             loggerAuthController.error(ex.getMessage());
-            return "";
+            return false;
         }
+
     }
 
-    private static String decryptException(String input) {
-        try {
-            return decrypt(input);
-        } catch (DecryptionException ex){
-            loggerAuthController.error(ex.getMessage());
-            return "";
-        }
-    }
 
 
 }
